@@ -8,7 +8,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: cmdIL.test,v 1.36 2007/12/23 17:52:34 msofer Exp $
+# RCS: @(#) $Id: cmdIL.test,v 1.37 2008/01/22 11:38:34 msofer Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest 2
@@ -750,6 +750,9 @@ test cmdIL-7.5 {lreverse command - unshared object} {
 test cmdIL-7.6 {lreverse command - unshared object [Bug 1672585]} {
     lreverse [set x {1 2 3}][unset x]
 } {3 2 1}
+test cmdIL-7.7 {lreverse command - empty object [Bug 1876793]} {
+    lreverse [list]
+} {}
 
 testConstraint testobj [llength [info commands testobj]]
 test cmdIL-7.7 {lreverse command - shared intrep [Bug 1675044]} -setup {
